# customer-support-assistant-rust

./: .env.sample  Cargo.toml  Readme.md
src/: main.rs
src/api/: assistant_request.rs  gpt_request.rs  mod.rs
src/helpers/: assistant.rs  backend.rs  command_line.rs  mod.rs  request.rs
src/models/: mod.rs
src/models/agents/: agent_backend.rs  agent_escalation.rs  agent_feedback.rs  agent_intent.rs  agent_query.rs  agent_sentiment.rs  mod.rs
src/models/agents_common/: common_agent.rs  common_traits.rs  mod.rs
src/models/agents_coordinator/: agent_coordinator.rs  mod.rs
src/models/ai/: assistant.rs  chatgpt.rs  mod.rs
src/models/general/: mod.rs  route.rs  support_case.rs
template/: api_schema.json  code_template.rs  main.rs
