[package]
name = "customer-support-assistant-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
chrono = "0.4.38"
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version="0.12.5", features=["json"]}
serde = { version="1.0.204", features=["derive"]}
serde_json = "1.0.120"
tokio = { version="1.38.0", features=["full"]}
uuid = { version= "1.10.0", features=["v4"]}
